feat(global header): Add global actions with animations (#3008)
* feat(global-header): componentize parts of global header and add new global actions component

* Begin docs

* Begin docs

* Add documentation and tests

* Revert export

* Update snapshots

* update snapshots

* Fix lint and tests

* Add annotations and updated tests

* Fix typos and deconstructed props

* Add rem function to px values, add copy regarding unread notifications

* Fix lint

* Change token ref to brand, update tests

* Add some documentation around notifications

* Add favorites popover and task menu

* Update snapshots

* Update menus component to take custom icon

* Lint

* Update snapshots

* Update snapshots

* Update snapshots

* Update snapshots

* Add accessibility note to new notifications

--- a/packages/design-system/ui/components/branding/docs.mdx
+++ b/packages/design-system/ui/components/branding/docs.mdx
@@ -2,7 +2,7 @@ import Page from './docs/Page';
 import Token, { Tokens } from './docs/Token';
 import { Button } from '../buttons/base/example';
 import ButtonIcon from '../button-icons/';
-import { GlobalHeader } from '../global-header/base/example';
+import GlobalHeader from '../global-header/';
 import { ContextBar } from '../global-navigation/navigation-bar/example';
 import { ContextTabBar, ContextTab, ContextTabPanel } from '../global-navigation/navigation-tab-bar/example';
 import { FormElement } from '../form-element/base/example';
